# FalcoEngine

./: CMakeLists.txt  Doxyfile  FalcoEngine_bgfx.sln  Installer.iss  Readme.txt
API/: API.csproj  compile.sh
API/Assets/: AnimationClip.cs  Asset.cs  AudioClip.cs  Cubemap.cs  Font.cs  Material.cs  Mesh.cs  Prefab.cs  Shader.cs  SubMesh.cs  Texture.cs  VideoClip.cs
API/Core/: Application.cs  Collision.cs  Debug.cs  EntryPoint.cs  GameObject.cs  LayerMask.cs  Object.cs  Physics.cs  PlayerPrefs.cs  RaycastHit.cs  SceneManager.cs  Screen.cs  Time.cs
API/Input/: Cursor.cs  Input.cs  ScanCode.cs
API/Math/: Bounds.cs  Mathf.cs  Matrix3.cs  Matrix4.cs  Plane.cs  Quaternion.cs  Random.cs  Ray.cs  Rect.cs  Vector2.cs  Vector3.cs  Vector4.cs
API/Other/: QualitySettings.cs
API/Properties/: AssemblyInfo.cs
API/Renderer/: Graphics.cs  RenderSettings.cs  RenderTexture.cs
Bgfx/bgfx/: makefile
Editor/: Editor.aps  Editor.rc  Editor.vcxproj  Editor.vcxproj.filters  main.cpp  resource.h
Editor/BuildSystems/: BuildSystemWin64.cpp  BuildSystemWin64.h  ProjectOptimizer.cpp  ProjectOptimizer.h
Editor/Classes/: LightmapBaker.cpp  LightmapBaker.h  SolutionWorker.cpp  SolutionWorker.h  Toast.cpp  Toast.h  TreeNode.cpp  TreeNode.h  TreeView.cpp  TreeView.h  Undo.cpp  Undo.h
Editor/Dialogs/: DialogAbout.cpp  DialogAbout.h  DialogAnimationCrop.cpp  DialogAnimationCrop.h  DialogAssetExporter.cpp  DialogAssetExporter.h  DialogCSGStairBuilder.cpp  DialogCSGStairBuilder.h  DialogProgress.cpp  DialogProgress.h  DialogProjectBuild.cpp  DialogProjectBuild.h  DialogRagdollEditor.cpp  DialogRagdollEditor.h  DialogTextInput.cpp  DialogTextInput.h
Editor/PropertyEditors/: AnimationEditor.cpp  AnimationEditor.h  AudioClipEditor.cpp  AudioClipEditor.h  AudioListenerEditor.cpp  AudioListenerEditor.h  AudioSourceEditor.cpp  AudioSourceEditor.h  BoxColliderEditor.cpp  BoxColliderEditor.h  ButtonEditor.cpp  ButtonEditor.h  CSGBrushEditor.cpp  CSGBrushEditor.h  CSGModelEditor.cpp  CSGModelEditor.h  CameraEditor.cpp  CameraEditor.h  CanvasEditor.cpp  CanvasEditor.h  CapsuleColliderEditor.cpp  CapsuleColliderEditor.h  ComponentEditor.cpp  ComponentEditor.h  ConeTwistJointEditor.cpp  ConeTwistJointEditor.h  CubemapEditor.cpp  CubemapEditor.h  DecalRendererEditor.cpp  DecalRendererEditor.h  FixedJointEditor.cpp  FixedJointEditor.h  FreeJointEditor.cpp  FreeJointEditor.h  HingeJointEditor.cpp  HingeJointEditor.h  ImageEditor.cpp  ImageEditor.h  LightEditor.cpp  LightEditor.h  (+94 more)
Editor/Serialization/: EditorSettings.cpp  EditorSettings.h  SProjectData.h
Editor/Windows/: AnimationEditorWindow.cpp  AnimationEditorWindow.h  AssetsWindow.cpp  AssetsWindow.h  ConsoleWindow.cpp  ConsoleWindow.h  GameWindow.cpp  GameWindow.h  HierarchyWindow.cpp  HierarchyWindow.h  InspectorWindow.cpp  InspectorWindow.h  LightingWindow.cpp  LightingWindow.h  MainWindow.cpp  MainWindow.h  NavigationWindow.cpp  NavigationWindow.h  ProjectSelector.cpp  ProjectSelector.h  SceneWindow.cpp  SceneWindow.h  UIEditorWindow.cpp  UIEditorWindow.h
Engine/: Engine.vcxproj  Engine.vcxproj.filters
Engine/API/: API.cpp  API.h  API_Animation.cpp  API_Animation.h  API_Application.cpp  API_Application.h  API_Asset.cpp  API_Asset.h  API_AudioClip.cpp  API_AudioClip.h  API_AudioListener.cpp  API_AudioListener.h  API_AudioSource.cpp  API_AudioSource.h  API_BoxCollider.cpp  API_BoxCollider.h  API_Button.cpp  API_Button.h  API_Camera.cpp  API_Camera.h  API_Canvas.cpp  API_Canvas.h  API_CapsuleCollider.cpp  API_CapsuleCollider.h  API_Collider.cpp  API_Collider.h  API_Component.cpp  API_Component.h  API_ConeTwistJoint.cpp  API_ConeTwistJoint.h  API_Cursor.cpp  API_Cursor.h  API_Debug.cpp  API_Debug.h  API_FixedJoint.cpp  API_FixedJoint.h  API_FreeJoint.cpp  API_FreeJoint.h  API_GUI.cpp  API_GUI.h  (+78 more)
Engine/Assets/: AnimationClip.cpp  AnimationClip.h  Asset.cpp  Asset.h  AudioClip.cpp  AudioClip.h  Cubemap.cpp  Cubemap.h  Font.cpp  Font.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model3DLoader.cpp  Model3DLoader.h  Prefab.cpp  Prefab.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VideoClip.cpp  VideoClip.h
Engine/Classes/: GUIDGenerator.cpp  GUIDGenerator.h  Hash.h  Helpers.cpp  Helpers.h  IO.cpp  IO.h  StringConverter.cpp  StringConverter.h  VectorUtils.h  ZipHelper.cpp  ZipHelper.h  bc7compressor.cpp  bc7compressor.h  brtshaderc.cpp  brtshaderc.h  dirent.h  md5.cpp  wave.cpp  wave.h
Engine/Components/: Animation.cpp  Animation.h  AudioListener.cpp  AudioListener.h  AudioSource.cpp  AudioSource.h  BoxCollider.cpp  BoxCollider.h  Button.cpp  Button.h  CSGBrush.cpp  CSGBrush.h  CSGModel.cpp  CSGModel.h  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  CapsuleCollider.cpp  CapsuleCollider.h  Collider.cpp  Collider.h  Component.cpp  Component.h  ConeTwistJoint.cpp  ConeTwistJoint.h  DecalRenderer.cpp  DecalRenderer.h  FixedJoint.cpp  FixedJoint.h  FreeJoint.cpp  FreeJoint.h  HingeJoint.cpp  HingeJoint.h  Image.cpp  Image.h  Light.cpp  Light.h  Mask.cpp  Mask.h  (+38 more)
Engine/Core/: APIManager.cpp  APIManager.h  Debug.cpp  Debug.h  Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  InputManager.cpp  InputManager.h  LayerMask.cpp  LayerMask.h  NavigationManager.cpp  NavigationManager.h  Object.cpp  Object.h  PhysicsManager.cpp  PhysicsManager.h  SoundManager.cpp  SoundManager.h  Time.cpp  Time.h
Engine/Gizmo/: Gizmo.cpp  Gizmo.h  ImGuizmo.cpp  ImGuizmo.h
Engine/Math/: AxisAlignedBox.cpp  AxisAlignedBox.h  Mathf.cpp  Mathf.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Raycast.cpp  Raycast.h  Rect.cpp  Rect.h
Engine/Navigation/: InputGeom.cpp  PerfTimer.cpp
Engine/OcclusionCulling/: CompilerSpecific.inl  FrameRecorder.cpp  MaskedOcclusionCulling.h
Engine/Renderer/: BatchedGeometry.cpp  BatchedGeometry.h  CSGGeometry.cpp  CSGGeometry.h  Color.cpp  Color.h  Frustum.cpp  Frustum.h  NullTextureData.h  Primitives.cpp  Primitives.h  RenderTexture.cpp  RenderTexture.h  Renderer.cpp  Renderer.h  VertexBuffer.h  VertexLayouts.cpp  Window.cpp  (+2 more)
Player/: LogoText.c  Player.rc  Player.vcxproj  Player.vcxproj.filters  SteamManager.h  main.cpp  resource.h
(+128 files in other folders)
